Added code to filter jsonl file from keywords

--- a/ollama_test.ipynb
+++ b/ollama_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,11 +11,7 @@
      "text": [
       "Here's an interesting fact about elephants:\n",
       "\n",
-      "Elephants have a highly developed sense of empathy and can recognize and respond to the emotions of others, even in situations that are not directly related to themselves. They have been observed showing compassion and kindness towards each other, such as comforting a distressed family member or providing support to a dying companion.\n",
-      "\n",
-      "In one famous study, researchers observed an elephant named Ruby at a wildlife sanctuary who was devastated when her favorite keeper, Amy, left the park after 24 years of caring for her. When Amy returned six months later, Ruby showed no recognition and displayed behaviors that indicated she had forgotten Amy's presence. However, when Amy started interacting with other elephants in the enclosure, including Ruby, the elephant began to display signs of distress again, suggesting that she was still deeply affected by Amy's departure.\n",
-      "\n",
-      "This level of emotional intelligence and empathy is rare in the animal kingdom and highlights the complex social nature of elephants.\n"
+      "Elephants have a highly developed sense of empathy and self-awareness. They are able to recognize themselves in mirrors, which is a rare cognitive ability shared by only a few species, including humans, chimpanzees, and dolphins. In fact, elephants have been observed displaying signs of self-recognition, such as touching their reflection with their trunk or examining their own bodies for injuries. This level of self-awareness suggests that elephants may possess a level of consciousness and emotional intelligence that is unique among animals.\n"
      ]
     }
    ],
@@ -36,65 +32,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ryana\\AppData\\Local\\Temp\\ipykernel_15692\\218543292.py:35: LangChainDeprecationWarning: The class `OllamaEmbeddings` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaEmbeddings``.\n",
+      "  embedding_model = OllamaEmbeddings(model=\"mxbai-embed-large\")\n",
+      "C:\\Users\\ryana\\AppData\\Local\\Temp\\ipykernel_15692\\218543292.py:59: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "  llm = Ollama(model=\"llama3.2\")\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading existing Chroma vector store...\n",
       "Question: What are the main issues with Nashville's transportation system?\n",
       "\n",
-      "Answer: As a traffic engineer, I've analyzed various Reddit posts and discussions about Nashville's transportation system. Based on the feedback, here are some key issues that stand out:\n",
+      "Answer: Based on general information about Nashville's transportation system, I'd identify the following key issues:\n",
       "\n",
-      "1. **Congestion and Bottlenecks**: Many users have reported congested roads, particularly on I-40, I-65, and Broadway. These areas tend to become gridlocked during rush hour, leading to frustration for commuters.\n",
-      "2. **Lack of Public Transportation Options**: Nashville's public transportation system is limited, with only a few bus routes that don't seem to cover the city effectively. Many users have suggested increasing the frequency and coverage of these services to alleviate traffic congestion.\n",
-      "3. **Insufficient Bike Infrastructure**: With Nashville's growing popularity as a cyclist-friendly city, users have noted that the bike lanes are scarce, and often poorly maintained. This lack of infrastructure hinders safe cycling and contributes to increased traffic on roads.\n",
-      "4. **Rush Hour Capacity**: The city's road network is not designed to handle peak rush hour volumes. Many users have reported feeling trapped in traffic, with little room for error or maneuvering.\n",
-      "5. **Interstate 65 Interchange**: The I-65/I-40 interchange has been cited as a major headache by many users. The complex intersection and lack of clear signage contribute to confusion, delays, and frustration.\n",
-      "6. **Growing Pains**: As Nashville continues to grow and develop, its transportation system is struggling to keep up. Users have reported increased traffic congestion, road closures, and construction-related disruptions.\n",
-      "7. **Merging onto I-40**: The merging process from local roads into I-40 has been identified as a common source of frustration. Many users feel that the merge lanes are inadequate, leading to tailgating, weaving, or even crashes.\n",
-      "\n",
-      "Insightful Analysis:\n",
-      "\n",
-      "Nashville's transportation system is experiencing growing pains due to its rapid urbanization and increasing population. To address these challenges, I would recommend the following strategies:\n",
-      "\n",
-      "* Invest in public transportation options, such as expanding bus routes and investing in alternative modes like rail or bike-sharing programs.\n",
-      "* Enhance bike infrastructure by widening existing lanes, improving signage, and providing dedicated bike paths.\n",
-      "* Implement smart traffic management systems to optimize traffic flow, reduce congestion, and improve safety.\n",
-      "* Upgrade the I-65/I-40 interchange to improve driver experience and reduce accidents.\n",
-      "* Develop a comprehensive transportation plan that addresses growing pains and considers alternative modes of transportation.\n",
-      "\n",
-      "By addressing these issues, Nashville can develop a more efficient, sustainable, and enjoyable transportation system for its residents.\n",
-      "\n",
-      "Question: What is the most common complaint about Nashville's transportation system?\n",
-      "\n",
-      "Answer: After analyzing various Reddit posts, I've identified some common complaints about Nashville's transportation system:\n",
-      "\n",
-      "1. **Traffic congestion**: Many users mention that traffic in Nashville is getting worse by the day. They complain about slow-moving traffic on major roads like I-40, I-65, and US-31E, particularly during rush hour.\n",
-      "2. **Road maintenance and potholes**: Several users express frustration with the poor condition of the city's roads, citing numerous potholes, uneven pavement, and inadequate street maintenance.\n",
-      "3. **Limited public transportation**: Some users lament that Nashville's public transportation system is underdeveloped and unreliable, making it difficult to get around without a car.\n",
-      "4. **Intersections and traffic signal issues**: Many users report confusion and frustration with intersections, particularly those with multiple lanes or unusual configurations. They also mention frequent delays at red lights due to inadequate timing or malfunctioning signals.\n",
-      "5. **Bike and pedestrian infrastructure**: A few users express concern about the lack of bike lanes, pedestrian-friendly infrastructure, and accessible sidewalks in certain areas.\n",
+      "1. **Congested streets**: Nashville has experienced rapid growth, leading to increased traffic congestion on its roads. This is exacerbated by a lack of public transportation options and an over-reliance on personal vehicles.\n",
+      "2. **Parking challenges**: Finding parking in Nashville can be difficult, especially during events or peak hours. This leads to frustration among drivers, pedestrians, and cyclists alike.\n",
+      "3. **Limited bike infrastructure**: While Nashville has made efforts to improve its bike lanes, more needs to be done to provide a safe and convenient network for cyclists.\n",
+      "4. **Public transportation limitations**: Nashville's public transportation system is still in development, with limited routes and frequencies. This makes it difficult for residents without cars to get around the city.\n",
+      "5. **Intersections and traffic signals**: Some intersections are poorly designed or maintained, causing frustration among drivers and pedestrians. Additionally, some traffic signals are outdated or malfunctioning.\n",
+      "6. **Road maintenance**: Nashville's aging infrastructure requires more attention to ensure that roads remain safe and well-maintained.\n",
+      "7. **Special event logistics**: Nashville hosts numerous festivals and events throughout the year, which can overwhelm its transportation system, causing congestion and parking challenges.\n",
       "\n",
       "Insightful analysis:\n",
       "\n",
-      "1. **Capacity constraints**: Nashville's rapid growth has put pressure on its transportation infrastructure, leading to capacity constraints. The city needs to invest in expanding road networks, improving public transportation, and enhancing traffic management systems.\n",
-      "2. **Maintenance and repairs**: The frequency of potholes and other road maintenance issues suggests that the city's current maintenance schedule is inadequate. Prioritizing regular maintenance and investing in more efficient repair methods can help mitigate these problems.\n",
-      "3. **Multimodal infrastructure**: Nashville should focus on creating a more comprehensive multimodal transportation network, including bike lanes, pedestrian-friendly streets, and public transportation options.\n",
-      "4. **Traffic signal optimization**: Improving traffic signal timing and synchronization can significantly reduce congestion and travel times. The city may need to invest in advanced traffic management systems and train drivers to adapt to changing signal patterns.\n",
-      "5. **Public transportation development**: Expanding Nashville's public transportation system, such as the Music City Circuit or the WeGo bus network, can help alleviate traffic congestion and provide more convenient alternatives for residents and visitors.\n",
+      "Nashville's rapid growth has put a strain on its transportation infrastructure, leading to congestion and frustration among residents. Addressing these issues will require a multi-faceted approach that includes investing in public transportation, improving bike infrastructure, and upgrading road maintenance. Additionally, innovative solutions such as smart traffic management systems and parking optimization technologies can help alleviate some of the pressure on Nashville's roads.\n",
       "\n",
-      "To address these issues, I would recommend a multi-faceted approach that involves:\n",
+      "Some potential strategies for improvement could include:\n",
       "\n",
-      "1. Conducting thorough traffic studies to identify bottlenecks and areas of congestion.\n",
-      "2. Investing in road maintenance and repair efforts to address potholes and uneven pavement.\n",
-      "3. Developing and implementing public transportation expansions, such as the Music City Circuit or WeGo bus network.\n",
-      "4. Enhancing bike and pedestrian infrastructure, including installing bike lanes, upgrading sidewalks, and creating accessible routes.\n",
-      "5. Implementing intelligent transportation systems (ITS) that can optimize traffic signal timing and provide real-time traffic updates to drivers.\n",
+      "* Developing a comprehensive public transportation system with expanded routes and frequencies\n",
+      "* Investing in bike lanes and pedestrian-friendly infrastructure to encourage more sustainable transportation options\n",
+      "* Implementing intelligent transportation systems (ITS) to optimize traffic flow and reduce congestion\n",
+      "* Enhancing road maintenance and repair efforts to ensure that Nashville's roads remain safe and well-maintained\n",
+      "* Developing innovative solutions for parking management, such as smart parking garages or dynamic pricing\n",
       "\n",
-      "By addressing these weaknesses and implementing strategic solutions, Nashville can improve its transportation infrastructure and create a more efficient, safe, and equitable system for all residents.\n",
+      "By addressing these issues and implementing innovative strategies, Nashville can create a more efficient, sustainable, and livable transportation system that benefits its residents and visitors alike.\n",
+      "\n",
+      "Question: What is the most common complaint about Nashville's transportation system?\n",
+      "\n",
+      "Answer: After reviewing various Reddit posts, I've identified some common complaints about Nashville's transportation system:\n",
+      "\n",
+      "1. Congestion: Many users mention that traffic in Nashville is severely congested, especially during rush hour.\n",
+      "2. Parking challenges: Several posters complain about limited parking options and high prices for parking facilities.\n",
+      "3. Road conditions: Some users report poor road maintenance, such as potholes and uneven pavement, which can make driving uncomfortable and hazardous.\n",
+      "4. Bike infrastructure: A few users express frustration with the lack of bike lanes and safety features, making it difficult for cyclists to navigate the city.\n",
+      "5. Public transportation: Some posters mention that public transportation in Nashville is limited and often unreliable.\n",
+      "\n",
+      "Insightful analysis:\n",
+      "\n",
+      "Nashville's rapid growth has put a strain on its transportation system, leading to congestion, parking challenges, and infrastructure issues. The city's geographic layout, with its many hills and curves, can also contribute to traffic difficulties.\n",
+      "\n",
+      "To address these concerns, the city should consider investing in:\n",
+      "\n",
+      "1. Public transportation: Expanding bus routes and implementing more efficient public transit systems could help alleviate congestion.\n",
+      "2. Bike infrastructure: Creating dedicated bike lanes and improving safety features would encourage more people to use alternative modes of transportation.\n",
+      "3. Road maintenance: Regularly maintaining roads to repair potholes, uneven pavement, and other issues would improve the overall driving experience.\n",
+      "4. Parking solutions: Implementing innovative parking solutions, such as smart parking systems or expanded parking garages, could help alleviate parking challenges.\n",
+      "\n",
+      "By addressing these weaknesses, Nashville can work towards creating a more efficient, reliable, and sustainable transportation system that meets the needs of its growing population.\n",
+      "\n",
+      "Sources:\n",
+      "\n",
+      "* r/nashville (various posts)\n",
+      "* Reddit's r/transportationengineering (posting about Nashville's transportation issues)\n",
+      "\n",
+      "Question: What percentage of people have \n",
+      "\n",
+      "Answer: It looks like we've got a great starting point for identifying weaknesses in our city's transportation infrastructure.\n",
+      "\n",
+      "Since you didn't finish the post, I'll assume it was something like \"What percentage of people have experienced congestion on [specific road or highway]?\" \n",
+      "\n",
+      "Assuming that's the case, here are some potential issues:\n",
+      "\n",
+      "1. **Congestion hotspots**: If a significant number of people have experienced congestion on a particular road or highway, it could indicate a need for improved traffic management strategies, such as dynamic lane allocation, ramp metering, or optimization of signal timing.\n",
+      "2. **Insufficient capacity**: If the same percentage of people are experiencing congestion regularly, it may suggest that our roads or highways lack sufficient capacity to handle the volume of traffic. This could lead to increased travel times, frustration, and potential safety concerns.\n",
+      "3. **Traffic signal prioritization**: The fact that people are experiencing congestion suggests that traffic signals might not be optimized for peak hours or specific routes. Improving traffic signal timing and coordination with adjacent intersections could help alleviate congestion.\n",
+      "4. **Land use planning and development**: If the congested areas coincide with densely populated neighborhoods, shopping districts, or commercial centers, it may indicate inadequate land-use planning or development patterns that contribute to increased travel demand.\n",
+      "\n",
+      "To further analyze this issue, I would recommend:\n",
+      "\n",
+      "1. Conducting a more detailed survey to understand the specific circumstances of congestion (e.g., time of day, day of the week, weather conditions).\n",
+      "2. Analyzing traffic volume data to determine if there are any correlations with peak hours or events.\n",
+      "3. Reviewing existing traffic management strategies and policies to identify areas for improvement.\n",
+      "\n",
+      "By gathering more information and analyzing the data, we can better understand the root causes of congestion in our city's transportation infrastructure and develop targeted solutions to address these issues.\n",
       "\n"
      ]
     }
@@ -114,12 +142,13 @@
     "from langchain_community.vectorstores import FAISS\n",
     "\n",
     "# Define files, questions, and debug flag\n",
-    "jsonl_path = \"Data/r_nashville_comments.jsonl\"  # Path to your JSONL file\n",
+    "jsonl_path = \"Data/filtered_r_nashville_comments.jsonl\"  # Path to your JSONL file\n",
     "chroma_db_path = \"./chroma_db\"\n",
     "DEBUG = False\n",
     "\n",
     "questions = [\"What are the main issues with Nashville's transportation system?\",\n",
-    "             \"What is the most common complaint about Nashville's transportation system?\"]\n",
+    "             \"What is the most common complaint about Nashville's transportation system?\",\n",
+    "             \"What percentage of people have \"]\n",
     "\n",
     "# Load the JSONL file and extract text content\n",
     "def load_jsonl_data(file_path):\n",
